roles/ingress/files/k8s-master01.idc2.jccfc.io/pre/payment-gateway-pre.corp.jccfc.com.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: payment-gateway-pre-corp
  namespace: triThirty-pre
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: payment-gateway-pre.corp.triThirty.com
    http:
      paths:
      - backend:
          serviceName: payment-gateway
          servicePort: 8080
